refactor: Polish assertj bits, optimise source pattern URL.